﻿12/29/2015 0.10.0.0 - Beta
  Began integrating essentia into crafting system.
  Added "Essentia" item.

12/29/2015 0.9.1.2 - Beta
  Fixed #261 AE2-RV3-Beta-2 issue
  Added particle effects to Knowledge Inscriber.

12/28/2015 0.9.1.2 - Beta
  Complete network code overhaul.

12/28/2015 0.9.1.1 - Beta
  Added a lot of safety checks to arcane patterns.
  Updated name of storage components and cells to better match AE2's.
  Fixes #260 - Players preferred item is now used in arcane patterns.
  QOL: Essentia terminal aspects are now un-selectable.

12/27/2015 0.9.1.0 - Beta
  Fixes #112 - A.C.T can now issue crafting jobs!
  Fixes #230 - Arcane patterns now respect substitutions.
  Note: This change is NOT retro-active. Knowledge cores must have their patterns re-saved in order for the changes to take effect.

12/24/2015 0.9.0.4 - Alpha
  Dependency Updated: Forge 10.13.4.1558
  Dependency Updated: AE2-rv3-beta-1
  Merged pull request #255 - Keridos
  Merged pull request #252 - Aquahatsche
  Fixed #255 TODO's
  Fixes #228 - Corrected blacklisting code
  Fixes compatibility with Thaumic Tinkerer.
  Fixes #249 - Capacity can be checked on any essentia container, inject now respects essentia the container would not take.
  Fixes issue with Technomancy(and any other mods that use my API) where essentia was voided when mod container is full.
  Fixes #248 - Focus now interacts with caches properly.
  
10/13/2015 0.9.0.0 - Alpha
  Dependency Updated: AE2-rv3-9
  Fixes #227: Storage bus void support restored, attaches to network when placed with pre-set filters, and condenser support restored. May address #234
  Added EssentiaProvider to Thaumic Tinkerer blacklist, will be supported in the next release of Thaumic Tinkerer #228
  Fixes #229: Storage bus can fully utilize the Essentia Reservoir without setting filters.
  Fixes #239: Essentia cells obey their filters when used in an IO port.