@@ -14,6 +14,7 @@ thaumicenergistics.block.essentia.cell.workbench.name=Essentia Cell Workbench
 thaumicenergistics.block.arcane.assembler.name=Arcane Assembler
 thaumicenergistics.block.knowledge.inscriber.name=Knowledge Inscriber
 thaumicenergistics.block.essentia.vibration.chamber.name=Essentia Vibration Chamber
+thaumicenergistics.block.distillation.encoder.name=Distillation Encoder
 
 #Cable parts
 thaumicenergistics.aeparts.essentia.ImportBus.name=Essentia Import Bus
